Add vim-git from tpope
Add https://github.com/tpope/vim-git.git as a pathogen bundle

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "bundle/specky"]
 	path = bundle/specky
 	url = https://github.com/vim-scripts/Specky.git
+[submodule "bundle/vim-git"]
+	path = bundle/vim-git
+	url = https://github.com/tpope/vim-git.git
