--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,12 @@
 [submodule "bundle/gundo-vim"]
 	path = bundle/gundo-vim
 	url = http://github.com/sjl/gundo.vim.git
+[submodule "bundle/vim-gradle"]
+	path = bundle/vim-gradle
+	url = https://github.com/tfnico/vim-gradle.git
+[submodule "bundle/vim-unimpaired"]
+	path = bundle/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired.git
+[submodule "bundle/vim-better-whitespace"]
+	path = bundle/vim-better-whitespace
+	url = https://github.com/ntpeters/vim-better-whitespace.git
