--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ doc/tags*
 .netrwhist
 viminfo
 
-plugged/*
-tmp/backup/*~
-tmp/undo/*~
+plugged/
+tmp/backup/
+tmp/undo/
 autoload/
 ftplugin/
+.DS_Store
